--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -12,11 +12,15 @@ body {
     color: #ffffff;
 }
 
+h1, h2, h3, h4, h5, h6, p {
+    margin: 0;
+}
+
 /* BASE */
 
 .container-wide {
     margin: 0 auto;
-    width: 1790px;
+    max-width: 1790px;
     padding: 0 15px;
 }
 
@@ -26,7 +30,10 @@ body {
 
 .space-between {
     justify-content: space-between;
-    algn-items: center;
+}
+
+.align-items {
+    align-items: center;
 }
 
 .container {
@@ -72,24 +79,100 @@ body {
 
 .nav a {
     color: #fff;
+    position: relative;
     text-decoration: none;
     transition: color 0.2s ease-in;
+    padding-bottom: 5px;
+}
+
+.nav a::after {
+    position: absolute;
+    left: 0;
+    bottom: -10px;
+    display: block;
+    content: "";
+    width: 100%;
+    height: 2px;
+    background-color: #fff;
+    opacity: 0;
+    transition: all 0.2s ease-in;
 }
 
 .nav a:hover {
     color: #FBD784;
 }
 
+.nav a:hover::after {
+    bottom: 0;
+    background-color: #fff;
+    opacity: 1;
+}
+
 .account {
+    padding-left: 30px;
     font-size: 17px;
     font-weight: 700;
+    position: relative;
     color: #fff;
     text-decoration: none;
     transition: color 0.2s ease-in;
+    vertical-align: center;
 }
 
 .account:hover {
     color: #FBD784;
+}
+
+.account::before {
+    display: block;
+    content: "";
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    left: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    background-image: url('./../img/icons/account.svg');
+    background-size: contain;
+}
+
+.nav-button {
+    height: 25px;
+    border: none;
+    padding: 0;
+    cursor: pointer;
+    background: transparent;
+}
+
+.nav-button-icon {
+    position: relative;
+    display: block;
+    background-color: #ffffff;
+    border:none;
+    width: 42px;
+    height: 5px;
+}
+
+.nav-button-icon::before {
+    position: absolute;
+    left: 0;
+    top: -10px;
+    content: "";
+    display: block;
+    width: 42px;
+    height: 5px;
+    background-color: #ffffff;
+}
+
+.nav-button-icon::after {
+    position: absolute;
+    left: 0;
+    bottom: -10px;
+    content: "";
+    display: block;
+    width: 42px;
+    height: 5px;
+    background-color: #ffffff;
 }
 
 /* HERO */
@@ -255,6 +338,7 @@ body {
     font-size: 18px;
     line-height: 1.222;
     color: #FBD784;
+    text-decoration: none;
 }
 
 .article-read-more:after {
@@ -347,6 +431,26 @@ body {
 }
 
 .footer-nav a {
+    position: relative;
+    padding-bottom: 5px;
     color: #ffffff;
     text-decoration: none;
+}
+
+.footer-nav a::after {
+    position: absolute;
+    left: 0;
+    bottom: -10px;
+    display: block;
+    content: "";
+    width: 100%;
+    height: 2px;
+    background-color: #fff;
+    opacity: 0;
+    transition: all 0.2s ease-in;
+}
+
+.footer-nav a:hover::after {
+    bottom: 0;
+    opacity: 1;
 }
