--- a/src/assets/css/media.css
+++ b/src/assets/css/media.css
@@ -1,15 +1,113 @@
-/*.header,*/
-.main,
-.footer {
-    display: none;
+@media (max-width: 1700px) {
+    .header {
+        padding-bottom: 250px;
+    }
 }
 
-.hero {
-    display: none;
+@media (max-width: 1200px) {
+    .hero-title {
+        font-size: 68px;
+    }
+
+    .article-text::before {
+        width: 140px;
+        height: 140px;
+        font-size: 140px;
+    }
+
+    .article-text {
+        padding-left: 50px;
+        max-width: 50%;
+    }
+
+    .article-img {
+        width: 45%;
+    }
+}
+
+@media (max-width: 1100px) {
+    .footer-nav + .footer-nav {
+        margin-left: 100px;
+    }
+}
+
+@media (max-width: 920px) {
+    .footer-row {
+        flex-direction: column-reverse;
+    }
+
+    .footer-nav-wrapper {
+        margin-bottom: 80px;
+    }
 }
 
 @media (max-width: 800px) {
+    .header {
+        padding-bottom: 200px;
+    }
     .nav, .account {
         display: none;
+    }
+
+    .nav-wrapper {
+        margin-bottom: 95px;
+    }
+
+    .nav-button {
+        display: block;
+    }
+
+    .mobile-nav-active {
+        display: flex;
+    }
+
+    .hero-title {
+        font-size: 47px;
+    }
+
+    .hero-category::before {
+        width: 42px;
+    }
+
+    .hero-category {
+        font-size: 14px;
+        padding-left: 62px;
+    }
+
+    .article-title {
+        font-size: 44px;
+    }
+
+    .article-text {
+        margin-right: 0;
+    }
+}
+
+@media (max-width: 720px) {
+
+    .article, .article:nth-child(even) {
+        flex-direction: column-reverse;
+        margin-bottom: 100px;
+    }
+
+    .article-text {
+        max-width: 100%;
+    }
+
+    .article-img {
+        max-width: 320px;
+        width: 100%;
+        margin-bottom: 25px;
+    }
+}
+
+@media (max-width: 560px) {
+    .footer-nav-wrapper {
+        flex-direction: column;
+    }
+
+    .footer-nav + .footer-nav {
+        margin-left: 0;
+        margin-top: 60px;
     }
 }
